[tool.poetry]
name = "bot-help"
version = "0.1.1"
description = "My description"
authors = ["swgonet"]
license = "no"
readme = "README.md"
packages = [{include = "bot_help"}]

[tool.poetry.dependencies]
python = "3.11.4"
datetime = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
