[tool.poetry]
name = "bot-pomichnik"
version = "1.0.1"
description = "My description"
authors = ["swgonet"]
license = "No"
readme = "README.md"
packages = [{include = "bot_pomichnik"}]

[tool.poetry.dependencies]
python = "3.11.4"
DateTime = "*"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
